fix letter-spacing on Chrome

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -37,7 +37,7 @@
   font-weight: 800;
   font-size: 90px;
   line-height: 90px;
-  letter-spacing: -2%;
+  letter-spacing: -1.8px;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
